GlacierParser.py
# Generated from Glacier.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GlacierParser ( Parser ):

    grammarFileName = "Glacier.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'begin'", "')'", "'let'", "'letrec'", 
                     "'define'", "'.'", "'define-syntax'", "'quote'", "'''", 
                     "'lambda'", "'if'", "' '", "'set'", "'!'", "'+'", "'-'", 
                     "'...'", "'$'", "'&'", "'*'", "'/'", "':'", "'<'", 
                     "'='", "'>'", "'?'", "'~'", "'_'", "'^'", "'#t'", "'#f'", 
                     "'@'", "'#'", "'\"'", "'`'", "','", "',@'", "'i'", 
                     "'e'", "'s'", "'f'", "'d'", "'l'", "';'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "LETTER", "DIGIT", "LARGE" ]

    RULE_program = 0
    RULE_form = 1
    RULE_definition = 2
    RULE_var_def = 3
    RULE_var = 4
    RULE_body = 5
    RULE_syntax_def = 6
    RULE_keyword = 7
    RULE_syntax_binding = 8
    RULE_expr = 9
    RULE_cons = 10
    RULE_formals = 11
    RULE_application = 12
    RULE_idG = 13
    RULE_initial = 14
    RULE_subsequent = 15
    RULE_datum = 16
    RULE_booleanG = 17
    RULE_number = 18
    RULE_character = 19
    RULE_string = 20
    RULE_symbol = 21
    RULE_listG = 22
    RULE_abbr = 23
    RULE_vector = 24
    RULE_imag = 25
    RULE_real = 26
    RULE_ureal = 27
    RULE_uinteger = 28
    RULE_decimal = 29
    RULE_suffix = 30
    RULE_exponent = 31
    RULE_exponent_marker = 32
    RULE_sign = 33
    RULE_any_character = 34

    ruleNames =  [ "program", "form", "definition", "var_def", "var", "body", 
                   "syntax_def", "keyword", "syntax_binding", "expr", "cons", 
                   "formals", "application", "idG", "initial", "subsequent", 
                   "datum", "booleanG", "number", "character", "string", 
                   "symbol", "listG", "abbr", "vector", "imag", "real", 
                   "ureal", "uinteger", "decimal", "suffix", "exponent", 
                   "exponent_marker", "sign", "any_character" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    WS=48
    LETTER=49
    DIGIT=50
    LARGE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def form(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.FormContext)
            else:
                return self.getTypedRuleContext(GlacierParser.FormContext,i)


        def getRuleIndex(self):
            return GlacierParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = GlacierParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GlacierParser.T__0) | (1 << GlacierParser.T__9) | (1 << GlacierParser.T__14) | (1 << GlacierParser.T__15) | (1 << GlacierParser.T__16) | (1 << GlacierParser.T__17) | (1 << GlacierParser.T__18) | (1 << GlacierParser.T__19) | (1 << GlacierParser.T__20) | (1 << GlacierParser.T__21) | (1 << GlacierParser.T__22) | (1 << GlacierParser.T__23) | (1 << GlacierParser.T__24) | (1 << GlacierParser.T__25) | (1 << GlacierParser.T__26) | (1 << GlacierParser.T__27) | (1 << GlacierParser.T__28) | (1 << GlacierParser.T__29) | (1 << GlacierParser.T__30) | (1 << GlacierParser.T__31) | (1 << GlacierParser.T__32) | (1 << GlacierParser.T__33) | (1 << GlacierParser.T__34) | (1 << GlacierParser.LETTER))) != 0):
                self.state = 70
                self.form()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self):
            return self.getTypedRuleContext(GlacierParser.DefinitionContext,0)


        def expr(self):
            return self.getTypedRuleContext(GlacierParser.ExprContext,0)


        def getRuleIndex(self):
            return GlacierParser.RULE_form

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForm" ):
                listener.enterForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForm" ):
                listener.exitForm(self)




    def form(self):

        localctx = GlacierParser.FormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_form)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_def(self):
            return self.getTypedRuleContext(GlacierParser.Var_defContext,0)


        def syntax_def(self):
            return self.getTypedRuleContext(GlacierParser.Syntax_defContext,0)


        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(GlacierParser.DefinitionContext,i)


        def syntax_binding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.Syntax_bindingContext)
            else:
                return self.getTypedRuleContext(GlacierParser.Syntax_bindingContext,i)


        def getRuleIndex(self):
            return GlacierParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = GlacierParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definition)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.var_def()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.syntax_def()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(GlacierParser.T__0)
                self.state = 83
                self.match(GlacierParser.T__1)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GlacierParser.T__0:
                    self.state = 84
                    self.definition()
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 90
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.match(GlacierParser.T__0)
                self.state = 92
                self.match(GlacierParser.T__3)
                self.state = 93
                self.match(GlacierParser.T__0)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GlacierParser.T__0:
                    self.state = 94
                    self.syntax_binding()
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 100
                self.match(GlacierParser.T__2)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GlacierParser.T__0:
                    self.state = 101
                    self.definition()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.match(GlacierParser.T__0)
                self.state = 109
                self.match(GlacierParser.T__4)
                self.state = 110
                self.match(GlacierParser.T__0)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GlacierParser.T__0:
                    self.state = 111
                    self.syntax_binding()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 117
                self.match(GlacierParser.T__2)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GlacierParser.T__0:
                    self.state = 118
                    self.definition()
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 124
                self.match(GlacierParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.VarContext)
            else:
                return self.getTypedRuleContext(GlacierParser.VarContext,i)


        def expr(self):
            return self.getTypedRuleContext(GlacierParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(GlacierParser.BodyContext,0)


        def getRuleIndex(self):
            return GlacierParser.RULE_var_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_def" ):
                listener.enterVar_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_def" ):
                listener.exitVar_def(self)




    def var_def(self):

        localctx = GlacierParser.Var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_def)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(GlacierParser.T__0)
                self.state = 128
                self.match(GlacierParser.T__5)
                self.state = 129
                self.var()
                self.state = 130
                self.expr()
                self.state = 131
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(GlacierParser.T__0)
                self.state = 134
                self.match(GlacierParser.T__5)
                self.state = 135
                self.match(GlacierParser.T__0)
                self.state = 136
                self.var()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GlacierParser.T__14) | (1 << GlacierParser.T__15) | (1 << GlacierParser.T__16) | (1 << GlacierParser.T__17) | (1 << GlacierParser.T__18) | (1 << GlacierParser.T__19) | (1 << GlacierParser.T__20) | (1 << GlacierParser.T__21) | (1 << GlacierParser.T__22) | (1 << GlacierParser.T__23) | (1 << GlacierParser.T__24) | (1 << GlacierParser.T__25) | (1 << GlacierParser.T__26) | (1 << GlacierParser.T__27) | (1 << GlacierParser.T__28) | (1 << GlacierParser.T__29) | (1 << GlacierParser.LETTER))) != 0):
                    self.state = 137
                    self.var()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 143
                self.match(GlacierParser.T__2)
                self.state = 144
                self.body()
                self.state = 145
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.match(GlacierParser.T__0)
                self.state = 148
                self.match(GlacierParser.T__5)
                self.state = 149
                self.match(GlacierParser.T__0)
                self.state = 150
                self.var()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GlacierParser.T__14) | (1 << GlacierParser.T__15) | (1 << GlacierParser.T__16) | (1 << GlacierParser.T__17) | (1 << GlacierParser.T__18) | (1 << GlacierParser.T__19) | (1 << GlacierParser.T__20) | (1 << GlacierParser.T__21) | (1 << GlacierParser.T__22) | (1 << GlacierParser.T__23) | (1 << GlacierParser.T__24) | (1 << GlacierParser.T__25) | (1 << GlacierParser.T__26) | (1 << GlacierParser.T__27) | (1 << GlacierParser.T__28) | (1 << GlacierParser.T__29) | (1 << GlacierParser.LETTER))) != 0):
                    self.state = 151
                    self.var()
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 157
                self.match(GlacierParser.T__6)
                self.state = 158
                self.var()
                self.state = 159
                self.match(GlacierParser.T__2)
                self.state = 160
                self.body()
                self.state = 161
                self.match(GlacierParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idG(self):
            return self.getTypedRuleContext(GlacierParser.IdGContext,0)


        def getRuleIndex(self):
            return GlacierParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = GlacierParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.idG()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(GlacierParser.DefinitionContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.ExprContext)
            else:
                return self.getTypedRuleContext(GlacierParser.ExprContext,i)


        def getRuleIndex(self):
            return GlacierParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = GlacierParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 167
                    self.definition() 
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 174 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 173
                self.expr()
                self.state = 176 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GlacierParser.T__0) | (1 << GlacierParser.T__9) | (1 << GlacierParser.T__14) | (1 << GlacierParser.T__15) | (1 << GlacierParser.T__16) | (1 << GlacierParser.T__17) | (1 << GlacierParser.T__18) | (1 << GlacierParser.T__19) | (1 << GlacierParser.T__20) | (1 << GlacierParser.T__21) | (1 << GlacierParser.T__22) | (1 << GlacierParser.T__23) | (1 << GlacierParser.T__24) | (1 << GlacierParser.T__25) | (1 << GlacierParser.T__26) | (1 << GlacierParser.T__27) | (1 << GlacierParser.T__28) | (1 << GlacierParser.T__29) | (1 << GlacierParser.T__30) | (1 << GlacierParser.T__31) | (1 << GlacierParser.T__32) | (1 << GlacierParser.T__33) | (1 << GlacierParser.T__34) | (1 << GlacierParser.LETTER))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syntax_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyword(self):
            return self.getTypedRuleContext(GlacierParser.KeywordContext,0)


        def expr(self):
            return self.getTypedRuleContext(GlacierParser.ExprContext,0)


        def getRuleIndex(self):
            return GlacierParser.RULE_syntax_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSyntax_def" ):
                listener.enterSyntax_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSyntax_def" ):
                listener.exitSyntax_def(self)




    def syntax_def(self):

        localctx = GlacierParser.Syntax_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_syntax_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(GlacierParser.T__0)
            self.state = 179
            self.match(GlacierParser.T__7)
            self.state = 180
            self.keyword()
            self.state = 181
            self.expr()
            self.state = 182
            self.match(GlacierParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeywordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idG(self):
            return self.getTypedRuleContext(GlacierParser.IdGContext,0)


        def getRuleIndex(self):
            return GlacierParser.RULE_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyword" ):
                listener.enterKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyword" ):
                listener.exitKeyword(self)




    def keyword(self):

        localctx = GlacierParser.KeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_keyword)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.idG()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Syntax_bindingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyword(self):
            return self.getTypedRuleContext(GlacierParser.KeywordContext,0)


        def expr(self):
            return self.getTypedRuleContext(GlacierParser.ExprContext,0)


        def getRuleIndex(self):
            return GlacierParser.RULE_syntax_binding

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSyntax_binding" ):
                listener.enterSyntax_binding(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSyntax_binding" ):
                listener.exitSyntax_binding(self)




    def syntax_binding(self):

        localctx = GlacierParser.Syntax_bindingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_syntax_binding)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(GlacierParser.T__0)
            self.state = 187
            self.keyword()
            self.state = 188
            self.expr()
            self.state = 189
            self.match(GlacierParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cons(self):
            return self.getTypedRuleContext(GlacierParser.ConsContext,0)


        def var(self):
            return self.getTypedRuleContext(GlacierParser.VarContext,0)


        def datum(self):
            return self.getTypedRuleContext(GlacierParser.DatumContext,0)


        def formals(self):
            return self.getTypedRuleContext(GlacierParser.FormalsContext,0)


        def body(self):
            return self.getTypedRuleContext(GlacierParser.BodyContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.ExprContext)
            else:
                return self.getTypedRuleContext(GlacierParser.ExprContext,i)


        def application(self):
            return self.getTypedRuleContext(GlacierParser.ApplicationContext,0)


        def syntax_binding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlacierParser.Syntax_bindingContext)
            else:
                return self.getTypedRuleContext(GlacierParser.Syntax_bindingContext,i)


        def getRuleIndex(self):
            return GlacierParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = GlacierParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 281
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.cons()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.var()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 193
                self.match(GlacierParser.T__0)
                self.state = 194
                self.match(GlacierParser.T__8)
                self.state = 195
                self.datum()
                self.state = 196
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 198
                self.match(GlacierParser.T__9)
                self.state = 199
                self.datum()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 200
                self.match(GlacierParser.T__0)
                self.state = 201
                self.match(GlacierParser.T__10)
                self.state = 202
                self.formals()
                self.state = 203
                self.body()
                self.state = 204
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 206
                self.match(GlacierParser.T__0)
                self.state = 207
                self.match(GlacierParser.T__11)
                self.state = 208
                self.expr()
                self.state = 210 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 209
                    self.match(GlacierParser.T__12)
                    self.state = 212 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==GlacierParser.T__12):
                        break

                self.state = 214
                self.expr()
                self.state = 216 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 215
                    self.match(GlacierParser.T__12)
                    self.state = 218 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==GlacierParser.T__12):
                        break

                self.state = 220
                self.expr()
                self.state = 221
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 223
                self.match(GlacierParser.T__0)
                self.state = 224
                self.match(GlacierParser.T__11)
                self.state = 226 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 225
                    self.match(GlacierParser.T__12)
                    self.state = 228 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==GlacierParser.T__12):
                        break

                self.state = 230
                self.expr()
                self.state = 232 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 231
                    self.match(GlacierParser.T__12)
                    self.state = 234 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==GlacierParser.T__12):
                        break

                self.state = 236
                self.expr()
                self.state = 237
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 239
                self.match(GlacierParser.T__0)
                self.state = 240
                self.match(GlacierParser.T__13)
                self.state = 241
                self.match(GlacierParser.T__14)
                self.state = 242
                self.var()
                self.state = 243
                self.expr()
                self.state = 244
                self.match(GlacierParser.T__2)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 246
                self.application()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 247
                self.match(GlacierParser.T__0)
                self.state = 248
                self.match(GlacierParser.T__3)
                self.state = 249
                self.match(GlacierParser.T__0)
                self.state = 253
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GlacierParser.T__0:
                    self.state = 250
                    self.syntax_binding()
                    self.state = 255
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
